k3s/configs/manifests/app-service.yaml
# App Service
apiVersion: v1
kind: Service
metadata:
  name: supercheck-app-service
  namespace: supercheck
spec:
  type: ClusterIP
  selector:
    app: supercheck-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
